# xf86-video-nested

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  client.h  driver.c  driver.lo  input.c  input.h  mouse.c  nestedv_drv.la  xNestedMouse.c  xNestedMouse.h  xcbclient.c  xlibclient.c  xlibclient.c~  xlibclient.lo
src/.deps/: driver.Plo  xlibclient.Plo
src/.libs/: nestedv_drv.la  nestedv_drv.lai
